terraform/modules/cert-manager/cert-manager-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cert-manager-acme-route
  namespace: booking-app-main
spec:
  parentRefs:
    - name: booking-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/acme-challenge/
      backendRefs:
        - name: cm-acme-http-solver
          port: 80
